# causal-inference-agent

./: .env.example  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  BUGS_AND_IMPROVEMENTS.md  CAUSAL_METHODS.md  CONTEXT_MANAGEMENT_PLAN.md  DESIGN.md  DEVELOPMENT.md  DOCUMENTATION.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  docker-compose.yml  start.sh
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  run_agentic_evals.py  run_e2e_tests.py  run_kaggle_e2e.py  run_live_eval.py
backend/benchmarks/: __init__.py
backend/benchmarks/datasets/: __init__.py  loader.py
backend/benchmarks/runners/: __init__.py  benchmark_runner.py  test_benchmark.py
backend/data/: jobs.json  results.json  traces.json
backend/src/: __init__.py
backend/src/agents/: __init__.py  registry.py
backend/src/agents/base/: __init__.py  agent.py  context_tools.py  errors.py  react_agent.py  state.py  tool.py
backend/src/agents/critique/: __init__.py  critique_agent.py
backend/src/agents/orchestrator/: __init__.py  orchestrator_agent.py  react_orchestrator.py
backend/src/agents/specialists/: __init__.py  causal_discovery.py  confounder_discovery.py  dag_expert.py  data_profiler.py  data_repair.py  domain_knowledge_agent.py  eda_agent.py  effect_estimator.py  effect_estimator_react.py  notebook_generator.py  ps_diagnostics.py  sensitivity_analyst.py
backend/src/agents/specialists/effect_estimation/: __init__.py  agent.py  (+3 more)
backend/src/api/: main.py  rate_limit.py
backend/src/api/routes/: __init__.py  health.py  jobs.py
backend/src/api/schemas/: __init__.py  job.py
backend/src/api/utils/: __init__.py  results_synthesis.py
backend/src/benchmarks/: __init__.py  datasets.py  evaluation.py
backend/src/benchmarks/agentic_evals/: __init__.py  base.py  causal_discovery_eval.py  critique_agent_eval.py  data_profiler_eval.py  eda_agent_eval.py  effect_estimator_eval.py  eval_runner.py  orchestrator_eval.py  sensitivity_analyst_eval.py
backend/src/causal/: __init__.py
backend/src/causal/dag/: __init__.py  discovery.py
backend/src/causal/estimators/: __init__.py  effect_estimator.py
backend/src/causal/methods/: __init__.py  base.py  causal_forest.py  did.py  double_ml.py  iv.py  metalearners.py  ols.py  propensity.py  rdd.py
backend/src/causal/utils/: __init__.py
backend/src/config/: settings.py
backend/src/jobs/: __init__.py  manager.py
backend/src/kaggle/: __init__.py  metadata_extractor.py
backend/src/llm/: __init__.py  claude_client.py  client.py  gemini_client.py  vertex_client.py
backend/src/logging_config/: __init__.py  structured.py
backend/src/storage/: __init__.py  cleanup.py  firestore.py  local_storage.py
backend/tests/: __init__.py  conftest.py  test_benchmarks.py
backend/tests/integration/: __init__.py  test_full_pipeline.py  test_job_pipeline.py
backend/tests/unit/: __init__.py  test_agent_system.py  test_agents.py  test_api.py  test_api_enhanced.py  test_backpressure.py  test_causal_discovery.py  test_causal_discovery_methods.py  test_causal_methods.py  test_circuit_breaker.py  test_config.py  test_context_tools.py  test_data_profiler.py  test_domain_knowledge_agent.py  test_eda_agent.py  test_effect_estimator_adapter.py  test_llm_reset.py  test_metadata_extractor.py
(+116 files in other folders)
